<resources>
    <string name="app_name">"Anny's Cake"</string>
    <string name="title_home">Cliente</string>
    <string name="title_dashboard">Bolo</string>
    <string name="title_notifications">Lista de Pedidos</string>
    <string name="title_historico">HIstórico</string>
    <string name="data_de_entrega">Data de Entrega</string>
    <string name="nome_do_cliente">Nome do Cliente</string>
    <string name="valor_do_bolo">Valor do Bolo</string>
    <string name="recheio_do_bolo">Recheio do Bolo</string>
    <string name="tamanho_do_bolo">Tamanho do Bolo</string>
    <string name="tema_do_bolo">Tema do Bolo</string>
    <string name="cadastrar_pedido">Cadastrar Pedido</string>
    <string name="logoapp">LogoApp</string>
    <string name="mostrar_pedido">Mostrar Pedido</string>
    <string name="vai_aparecer_aqui">Vai aparecer aqui!</string>
    <string name="mostrar_pedidos">Mostrar Pedidos</string>
    <string name="pedidos_aparecer_o_aqui">Pedidos aparecerão aqui…</string>
    <string name="mostrar_pedidoss">Mostrar Pedidos</string>
    <string name="nome_do_cliente1">Nome do Cliente</string>
    <string name="tema_do_bolo1">Tema do Bolo</string>
    <string name="tamanho_do_bolo1">Tamanho do Bolo</string>
    <string name="recheio_do_bolo1">Recheio do Bolo</string>
    <string name="valor_do_bolo1">Valor do Bolo</string>
    <string name="data_de_entrega1">Data de Entrega</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="telefone">Telefone</string>
    <string name="endereco">Endereço</string>
    <string name="proximaPag">Próximo</string>
    <string name="anterior">Anterior</string>
    <string name="lista_de_pedidos_finalizados_ou_cancelados">Lista de pedidos finalizados ou cancelados</string>
    <string name="lista_de_pedidos">lista de pedidos</string>
    <string name="limpar">Button</string>
    <string name="lista_de_pedidos_top">Lista de Pedidos</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="crie_uma_conta_clicando_aqui">Crie uma conta clicando aqui</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="nome">Nome</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="deslogar">Deslogar</string>
    <string name="email_do_usuario">Email do Usuário</string>
    <string name="nome_do_usuario">Nome do Usuário</string>
    <string name="bem_vindo">Olá, Suanne!</string>
    <string name="voc_tem_pedidos">Você tem ... pedidos.</string>
    <string name="ol_suanne_voc_tem_quantidade_de_pedidos">Olá, Suanne. Você tem quantidade de pedidos!</string>
</resources>