<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/txtTemaBolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tema_do_bolo1"
            android:textColorHint="@color/black"
            android:inputType="text" />

        <Spinner
            android:id="@+id/spinnerOpcoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:forceDarkAllowed="false" />

        <Spinner
            android:id="@+id/spinnerMassas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <Spinner
            android:id="@+id/spinnerRecheios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <Spinner
            android:id="@+id/spinnerRecheiosEspeciais"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/txtValorBolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valor_do_bolo1"
            android:textColorHint="@color/black"
            android:inputType="numberDecimal"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

            <Button
                android:id="@+id/btnAnterior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anterior"
                android:layout_marginEnd="16dp"/>

            <Button
                android:id="@+id/btnCadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cadastrar_pedido" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
