<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".TelaLogin">


        <ImageView
            android:id="@+id/logocadastro"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/logoannyscake"/>


        <View
            android:id="@+id/viewcadastro"
            style="@style/containerComponents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logocadastro" />

        <EditText
            android:id="@+id/editEmail"
            style="@style/edit_text"
            android:inputType="textEmailAddress"
            android:drawableEnd="@drawable/mail_fill"
            android:drawableTint="@color/gray"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewcadastro"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/editSenha"
            style="@style/edit_text"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/eye_fill"
            android:drawableTint="@color/gray"
            android:padding="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editEmail"
            android:hint="@string/senha"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnEntrar"
            style="@style/button"
            android:text="@string/entrar"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/editSenha"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ProgressBar
            android:id="@+id/progressbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewcadastro"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            android:indeterminateTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtTelaCadastro"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressbar"
            android:text="@string/crie_uma_conta_clicando_aqui"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>