<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".TelaUsuario">

    <View
        android:id="@+id/containerUsuario"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/container_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconUsuario"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:src="@drawable/user_fill"
        app:layout_constraintBottom_toBottomOf="@+id/containerUsuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/containerUsuario"/>

    <ImageView
        android:id="@+id/iconMiniUsuario"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/user_fill"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/containerUsuario"/>

    <TextView
        android:id="@+id/miniNome"
        app:layout_constraintStart_toEndOf="@+id/iconMiniUsuario"
        app:layout_constraintTop_toBottomOf="@+id/containerUsuario"
        android:layout_marginTop="35dp"
        android:layout_marginStart="10dp"
        android:text="@string/nome_do_usuario"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/iconMiniEmail"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/mail_fill"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/iconMiniUsuario"/>

    <TextView
        android:id="@+id/miniEmail"
        app:layout_constraintStart_toEndOf="@+id/iconMiniEmail"
        app:layout_constraintTop_toBottomOf="@+id/iconMiniUsuario"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:text="@string/email_do_usuario"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeslogarCliente"
        style="@style/button"
        android:text="@string/deslogar"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconMiniEmail"
        android:layout_margin="50dp"
        android:padding="20dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>