<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pedidocliente.pedidoCliente">

<ImageView
    android:id="@+id/imgLogo"
    android:src="@drawable/logoannyscake"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_width="150dp"
    android:layout_height="150dp"/>


    <View
        android:id="@+id/containerComponents"
        style="@style/containerComponents"
        android:layout_width="384dp"
        android:layout_height="417dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgLogo" />

    <EditText
        android:id="@+id/txtTemaBolo"
        style="@style/edit_text"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/containerComponents"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/tema_do_bolo1"
        android:inputType="text"
        android:paddingStart="5dp"
        android:textColorHint="@color/black"
        tools:ignore="RtlSymmetry" />

    <Spinner
        android:id="@+id/spinnerOpcoes"
        style="@style/edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTemaBolo"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:forceDarkAllowed="false" />

    <Spinner
        android:id="@+id/spinnerMassas"
        style="@style/edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerOpcoes"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp" />

    <Spinner
        android:id="@+id/spinnerRecheios"
        style="@style/edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMassas"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp" />

    <Spinner
        android:id="@+id/spinnerRecheiosEspeciais"
        style="@style/edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRecheios"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/txtValorBolo"
        style="@style/edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDataEntrega"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/valor_do_bolo1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:paddingStart="5dp"
        android:paddingTop="13dp"
        android:textColorHint="@color/black"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/txtDataEntrega"
        style="@style/edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerRecheiosEspeciais"
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:hint="@string/data_de_entrega"
        android:inputType="date"
        android:paddingStart="5dp"
        android:textColorHint="@color/black"
        tools:ignore="RtlSymmetry" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCadastrar"
        style="@style/button"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/containerComponents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:text="@string/cadastrar_pedido" />

</androidx.constraintlayout.widget.ConstraintLayout>
